--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.12.3",
     "leva": "0.9.34",
     "react": "^18.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
@@ -34,7 +35,8 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.15",
     "@types/three": "^0.159.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0"
   },
   "scripts": {
     "start": "react-scripts start",
