Added some animations to the drawers and the chair

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "proxy": "https://gdmgent-2324-xr.github.io",
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@react-spring/web": "^9.7.3",
     "@react-three/drei": "9.92.0",
     "@react-three/fiber": "^8.15.12",
     "@react-three/flex": "^1.0.1",
